Bug 159776 - A11Y sidebar: No warning about multiple tabs used for creating spacing
Summary: A11Y sidebar: No warning about multiple tabs used for creating spacing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2024-02-19 13:02 UTC by Gabor Kelemen (Collabora)
Modified: 2024-07-15 06:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (8.29 KB, application/vnd.oasis.opendocument.text)
2024-02-19 13:02 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the missing warning (81.67 KB, image/png)
2024-02-19 13:03 UTC, Gabor Kelemen (Collabora)
Details
Updated example file (8.52 KB, application/vnd.oasis.opendocument.text)
2024-02-26 15:16 UTC, Gabor Kelemen (Collabora)
Details
Updated screenshot (49.78 KB, image/png)
2024-02-26 15:17 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-02-19 13:02:28 UTC
Created attachment 192634 [details]
Example file from Writer

Currently the Accessibility sidebar complains if someone uses many spaces or linebreaks to create distance, but not yet if they use multple tabs.

1. Open attached document
2. Open the accessibility check sidebar
-> there is no warning about the 2nd paragraph having multiple consecutive tabs, but there are warnings about multiple spaces and newlines.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1599fd7398c17276bec06e51ba144d1e694e6657
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-02-19 13:03:11 UTC
Created attachment 192635 [details]
Screenshot of the missing warning
Comment 2 Gabor Kelemen (Collabora) 2024-02-26 15:16:40 UTC
Created attachment 192796 [details]
Updated example file

Extra info: if there are two places where there are tabs between words, then there is a warning "Avoid using tabs for formatting".
If there is only one place where there are tabs between words, then there is no warning.
Comment 3 Gabor Kelemen (Collabora) 2024-02-26 15:17:45 UTC
Created attachment 192797 [details]
Updated screenshot
Comment 4 Stéphane Guillou (stragu) 2024-03-06 07:41:39 UTC
Reproduced in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9574a62add8e4901405e12117e75c86c2d2c2f21
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

(In reply to Gabor Kelemen (allotropia) from comment #2)
> Extra info: if there are two places where there are tabs between words, then
> there is a warning "Avoid using tabs for formatting".
> If there is only one place where there are tabs between words, then there is
> no warning.
More of a bug then, rather than just an enhancement.
Comment 5 Commit Notification 2024-07-12 14:54:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/629a20b97f186531d73d78ef8a02e5def35f22e1

tdf#159776 - A11Y sidebar: Fix no warning about multiple tabs

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2024-07-13 04:56:54 UTC
Thaks, Balazs Varga. 

Solved in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f74bb604ff043caa552d809bd8e9157ac7854f96
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Repro in (for comparison reason)
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2024-07-15 06:56:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8b2a98d2565fd3aaad3de05943f30a8a56d84948

tdf#159776 - A11Y sidebar: Fix no warning about multiple tabs

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.