tdf#159776 - A11Y sidebar: Fix no warning about multiple tabs

used for creating spacing.

Change-Id: I9a2725954406140efa27ccc3ae30f19d0bd1fa8a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170387
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 629a20b97f186531d73d78ef8a02e5def35f22e1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170472
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>